--- a/htmlCssJavascript/index.html
+++ b/htmlCssJavascript/index.html
@@ -15,9 +15,17 @@
       }
 
       header {
-        background: #2c3e50;  /* fallback para browsers antigos */
-        background: -webkit-linear-gradient(to right, #167e98, #f1515e);  /* Chrome 10-25, Safari 5.1-6 */
-        background: linear-gradient(to right, #167e98, #f1515e); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+        background: #2c3e50; /* fallback para browsers antigos */
+        background: -webkit-linear-gradient(
+          to right,
+          #167e98,
+          #f1515e
+        ); /* Chrome 10-25, Safari 5.1-6 */
+        background: linear-gradient(
+          to right,
+          #167e98,
+          #f1515e
+        ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
         color: white;
         padding: 1rem;
         text-align: center;
@@ -30,27 +38,64 @@
         align-items: center;
       }
 
+      .div-do-card {
+        display: flex;
+        flex-basis: 100%;
+        position: relative;
+      }
+
+      .card-do-card {
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+        transition: 0.3s;
+        width: 20%;
+        height: 320px;
+        border-radius: 5px;
+        padding: 20px 40px;
+      }
+
+      .card-do-card:hover {
+        box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+      }
+
+      .img-do-card {
+        width: 100%;
+        border-radius: 5px 5px 0 0;
+      }
+
+      .container-do-card {
+        padding: 2px 16px;
+      }
+
+      .div-do-btn {
+        margin-left: 50px;
+      }
+
       #registrarBtn {
         background-color: #3b9cf6;
-        height: 100%;
+        max-height: 100%;
         color: white;
         border: none;
         padding: 2rem 4rem;
         font-size: 1.2rem;
         border-radius: 8px;
         cursor: pointer;
+        transition: 0.3s;
         margin-bottom: 2rem;
-        box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
       }
 
+      #registrarBtn:hover {
+        box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
+          rgba(0, 0, 0, 0.22) 0px 10px 10px;
+      }
 
       #registrarBtn.saida {
         background-color: #dc2626;
       }
 
       #listaBatidas {
+        max-width: 100%;
         width: 100%;
-        max-width: 500px;
         list-style: none;
         padding: 0;
       }
@@ -58,7 +103,7 @@
       #listaBatidas li {
         background: #e5e7eb;
         margin-bottom: 0.5rem;
-        padding: 1rem;
+        padding: 0.5rem;
         border-radius: 6px;
       }
 
@@ -67,20 +112,53 @@
           padding: 1rem;
         }
 
-        #registrarBtn {
-          width: 90%;
+        .div-do-card {
+          flex-direction: column;
         }
+
+        .card-do-card {
+          width: 58%;
+          height: 100%;
+          margin-left: 10%;
+        }
+
+        #registrarBtn {
+          width: 86%;
+          margin-top: 30px;
+        }
+
+        #listaBatidas {
+          margin-left: -20px;
+        }
+
       }
     </style>
   </head>
-  
+
   <body>
     <header>
       <h1>Ponto Inteligente LTDA</h1>
     </header>
     <main>
-      <button id="registrarBtn">Entrada (registrar ponto)</button>
-      <ul id="listaBatidas"></ul>
+      <div class="div-do-card">
+        <div class="card-do-card">
+          <img
+            class="img-do-card"
+            src="https://cdn-icons-png.flaticon.com/512/3541/3541871.png"
+            alt="Avatar"
+          />
+          <div class="container-do-card">
+            <h4><b>Fulano de Tal</b></h4>
+            <p>Mat - 02598746</p>
+          </div>
+        </div>
+        <br />
+        <br />
+        <div class="div-do-btn">
+          <button id="registrarBtn">Entrada (registrar ponto)</button>
+          <ul id="listaBatidas"></ul>
+        </div>
+      </div>
     </main>
 
     <script>
