--- a/ponto-inteligente/index.html
+++ b/ponto-inteligente/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" data-beasties-container>
+<html lang="pt-BR" data-beasties-container>
 <head>
   <meta charset="utf-8">
   <title>Ponto Inteligente LTDA</title>
@@ -9,5 +9,5 @@
 <link rel="stylesheet" href="styles-5INURTSO.css"></head>
 <body>
   <app-root></app-root>
-<script src="polyfills-B6TNHZQ6.js" type="module"></script><script src="main-HZI3JTHN.js" type="module"></script></body>
+<script src="polyfills-B6TNHZQ6.js" type="module"></script><script src="main-QUL5DJQJ.js" type="module"></script></body>
 </html>
